Update .gitignore to allow CNAME file and add domain configuration

--- a/.gitignore
+++ b/.gitignore
@@ -86,7 +86,10 @@ dist
 
 # Gatsby files
 .cache/
-public
+# public
+
+# Important: Allow CNAME file for GitHub Pages domain configuration
+!public/CNAME
 
 # Storybook build outputs
 .out
